--- a/src/App.scss
+++ b/src/App.scss
@@ -4,8 +4,17 @@
   box-sizing: border-box;
 }
 
+a {
+  text-decoration: none;
+}
+
 a:focus,
 a:active {
+  outline: none;
+  text-decoration: none;
+}
+
+input {
   outline: none;
 }
 
