--- a/src/App.scss
+++ b/src/App.scss
@@ -38,6 +38,10 @@ body {
   border-radius: 5px;
   background: #fff;
   padding: 5px 8px;
+  cursor: pointer;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
 
   &__medium {
     padding: 9px 11px;
@@ -46,6 +50,11 @@ body {
   &__large {
     padding: 17px 18px;
     font-size: 18px;
+  }
+
+  &__for-modal {
+    font-size: 16px;
+    padding: 12px 15px;
   }
 
   &__danger {
@@ -73,6 +82,10 @@ body {
   }
 }
 
+.link {
+  color: #1890FF;
+}
+
 .wrapper {
   width: 100%;
   height: 100%;
@@ -83,10 +96,10 @@ body {
 }
 
 .container {
-  max-width: 970px;
+  max-width: 940px;
   width: 100%;
   margin: 0 auto;
-  @media (max-width: 982px) {
+  @media (max-width: 952px) {
     max-width: 750px;
   }
   @media (max-width: 767.98px) {
