--- a/src/App.scss
+++ b/src/App.scss
@@ -4,6 +4,12 @@
   box-sizing: border-box;
 }
 
+h1, h2, h3, h4, h5, h6 {
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 1;
+}
+
 a {
   text-decoration: none;
 }
@@ -14,8 +20,9 @@ a:active {
   text-decoration: none;
 }
 
-input {
+input, textarea {
   outline: none;
+  font-size: inherit;
 }
 
 button {
@@ -42,6 +49,7 @@ body {
   display: inline-flex;
   align-items: center;
   justify-content: center;
+  transition: 0.1s ease;
 
   &__medium {
     padding: 9px 11px;
@@ -54,31 +62,47 @@ body {
 
   &__for-modal {
     font-size: 16px;
-    padding: 12px 15px;
+    padding: 12px 35px;
   }
 
   &__danger {
     border: 1px solid #F5222D;
     color: #F5222D;
+    &:hover{
+      background: rgba(245, 34, 45, 0.21);
+    }
   }
 
   &__primary {
     border: 1px solid #1890FF;
     color: #1890FF;
+    &:hover{
+      background: rgba(24, 144, 255, 0.2);
+    }
   }
 
   &__success {
     border: 1px solid #52C41A;
     color: #52C41A;
+    &:hover{
+      background: rgba(82, 196, 26, 0.16);
+    }
   }
 
   &__light {
     border: 1px solid #D9D9D9;
+    &:hover{
+      background: #f1f1f1;
+    }
   }
 
   &__primary-bg {
     background: #1890FF;
     color: #fff;
+
+    &:hover{
+      background: #1b73d8;
+    }
   }
 }
 
@@ -106,4 +130,8 @@ body {
     max-width: 550px;
     padding: 0 10px;
   }
+}
+
+input:focus {
+  border: 1px solid #1890FF
 }
