--- a/src/components/Article/Article.scss
+++ b/src/components/Article/Article.scss
@@ -4,4 +4,42 @@
   border-radius: 5px;
   filter: drop-shadow(0px 4px 12px rgba(0, 0, 0, 0.15));
   margin: 0 0 25px;
+  color: rgba(0, 0, 0, 0.75);
+
+  &__header {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    margin: 0 0 4px;
+  }
+
+  &__title {
+    font-size: 20px;
+    line-height: 28px;
+    color: #1890FF;
+    margin: 0 13px 0 0;
+  }
+
+  &__like-block {
+    font-size: 12px;
+  }
+
+  &__tag-list {
+    margin: 0 0 4px;
+    display: flex;
+  }
+
+  &__tag-item {
+    font-size: 12px;
+    color: rgba(0, 0, 0, 0.5);
+    border: 1px solid rgba(0, 0, 0, 0.5);
+    padding: 3px 6px;
+    margin: 0 8px 0 0;
+    border-radius: 2px;
+  }
+
+  &__text{
+    font-size: 12px;
+    line-height: 22px;
+  }
 }
