--- a/src/components/Article/Article.scss
+++ b/src/components/Article/Article.scss
@@ -39,7 +39,12 @@
   }
 
   &__text{
-    font-size: 12px;
+    font-size: 15px;
     line-height: 22px;
+    word-wrap: break-spaces;
+    overflow-wrap: break-word;
   }
+}
+.pagination {
+  margin: 0 0 20px;
 }
