--- a/src/App.scss
+++ b/src/App.scss
@@ -1,3 +1,5 @@
+@import 'antd/dist/antd.css';
+
 * {
   margin: 0;
   padding: 0;
@@ -15,7 +17,7 @@ a {
 }
 
 a:focus,
-a:active {
+a:active, a:visited {
   outline: none;
   text-decoration: none;
 }
@@ -90,7 +92,16 @@ body {
   }
 
   &__light {
+    color: #262626;
     border: 1px solid #D9D9D9;
+    &:hover{
+      background: #f1f1f1;
+    }
+  }
+
+  &__light-br {
+    color: #262626;
+    border: 1px solid #262626;
     &:hover{
       background: #f1f1f1;
     }
