--- a/src/components/CreateArticle/CreateArticle.scss
+++ b/src/components/CreateArticle/CreateArticle.scss
@@ -9,7 +9,7 @@
   border-radius: 6px;
   display: flex;
   flex-direction: column;
-  margin: 0 auto;
+  margin: 0 auto 20px;
 
   &__title {
     font-weight: 500;
