--- a/src/components/EditProfile/EditProfile.scss
+++ b/src/components/EditProfile/EditProfile.scss
@@ -2,7 +2,7 @@
 
 .edit-profile {
   width: 385px;
-  margin: 0 auto;
+  margin: 0 auto 20px;
   padding: 48px 32px;
   background: #fff;
   border: 1px solid #D9D9D9;
