--- a/src/App.scss
+++ b/src/App.scss
@@ -10,6 +10,7 @@ h1, h2, h3, h4, h5, h6 {
   font-size: 14px;
   font-weight: 400;
   line-height: 1;
+  margin: 0;
 }
 
 a {
@@ -146,4 +147,25 @@ body {
 
 input:focus {
   border: 1px solid #1890FF
+}
+
+.like{
+  width: 20px;
+  padding: 0 20px;
+  background-color: transparent;
+  position: relative;
+  &:before{
+    content: "";
+    position: absolute;
+    left: 0px;
+    width: 16px;
+    height: 14px;
+    display: block;
+    background: url('/img/like.svg') no-repeat center center/cover;
+  }
+  &.active{
+    &:before{
+      background: url('/img/like-active.svg') no-repeat center center/cover;
+    }
+  }
 }
