--- a/src/components/ArticlePage/ArticlePage.scss
+++ b/src/components/ArticlePage/ArticlePage.scss
@@ -60,6 +60,30 @@
   }
 
   &__right-header {
+    display: flex;
+  }
 
+  &__info {
+    margin: 0 12px 0 0;
+    display: flex;
+    flex-direction: column;
+  }
+
+  &__name {
+    font-size: 18px;
+    line-height: 28px;
+    color: rgba(0, 0, 0, 0.85);
+  }
+
+  &__date {
+    font-size: 12px;
+    line-height: 22px;
+    color: rgba(0, 0, 0, 0.5);
+  }
+
+  &__avatar {
+    width: 46px;
+    height: 46px;
+    border-radius: 50%;
   }
 }
