--- a/src/App.scss
+++ b/src/App.scss
@@ -169,3 +169,13 @@ input:focus {
     }
   }
 }
+
+.error-label{
+  font-size: 12px;
+  color: #f52019;
+  margin: 5px 0 10px 0;
+}
+
+input.input-error{
+  border: 1px solid #f52019;
+}
