--- a/src/components/SignUp/SignUp.scss
+++ b/src/components/SignUp/SignUp.scss
@@ -19,7 +19,10 @@
   }
 
   &__label {
-    margin: 0 0 5px;
+    margin: 12px 0 5px;
+    &:first-of-type{
+      margin: 0 0 5px;
+    }
   }
 
   &__input {
@@ -27,19 +30,14 @@
     border-radius: 4px;
     font-size: 16px;
     padding: 12px 8px;
-    margin: 0 0 12px;
 
     &::placeholder {
       color: #BFBFBF;
     }
   }
 
-  &__input-password {
-    margin: 0 0 21px;
-  }
-
   &__btn {
-    margin: 0 0 10px;
+    margin: 21px 0 10px;
   }
 
   &__text {
@@ -54,11 +52,14 @@
   &__line {
     background: #E8E8E8;
     height: 1px;
-    margin: 0 0 10px;
+    margin: 20px 0 8px;
   }
 
   &__agree {
     line-height: 22px;
     margin: 0 0 15px;
+  }
+  &__checkbox {
+    margin: 0 5px 0 0;
   }
 }
