--- a/src/components/Like/Like.scss
+++ b/src/components/Like/Like.scss
@@ -19,4 +19,8 @@
       background: url('../../img/like-active.svg') no-repeat center center/cover;
     }
   }
+
+  &:disabled{
+    cursor: initial;
+  }
 }
