--- a/src/components/ArticlePage/Article.scss
+++ b/src/components/ArticlePage/Article.scss
@@ -61,12 +61,12 @@
 
   &__right-header {
     display: flex;
+    flex-direction: column;
   }
 
   &__info {
-    margin: 0 12px 0 0;
+    margin: 0 0 30px 0;
     display: flex;
-    flex-direction: column;
   }
 
   &__name {
@@ -82,6 +82,7 @@
   }
 
   &__avatar {
+    margin: 0 0 0 12px;
     width: 46px;
     height: 46px;
     border-radius: 50%;
