--- a/src/components/EditProfile/EditProfile.scss
+++ b/src/components/EditProfile/EditProfile.scss
@@ -19,7 +19,7 @@
   }
 
   &__label {
-    margin: 0 0 5px;
+    margin: 12px 0 5px 0;
   }
 
   &__input {
@@ -27,7 +27,7 @@
     border-radius: 4px;
     font-size: 16px;
     padding: 12px 8px;
-    margin: 0 0 12px;
+    margin: 0 0 0;
 
     &::placeholder {
       color: #BFBFBF;
