--- a/src/components/SignUp/SignUp.scss
+++ b/src/components/SignUp/SignUp.scss
@@ -37,7 +37,7 @@
   }
 
   &__btn {
-    margin: 21px 0 10px;
+    margin: 10px 0;
   }
 
   &__text {
@@ -52,7 +52,7 @@
   &__line {
     background: #E8E8E8;
     height: 1px;
-    margin: 20px 0 8px;
+    margin: 10px 0;
   }
 
   &__agree {
