--- a/src/components/ChangeArticle/ChangeArticle.scss
+++ b/src/components/ChangeArticle/ChangeArticle.scss
@@ -73,7 +73,6 @@
 
   &__wrap {
     display: flex;
-    margin: 0 15px 0 0;
   }
 
   &__item {
@@ -88,6 +87,8 @@
   &__added-tag {
     display: flex;
     margin: 20px 0;
+    flex-wrap: wrap;
+    gap: 12px;
   }
 
   &__delete {
