--- a/src/components/Input/Input.scss
+++ b/src/components/Input/Input.scss
@@ -25,9 +25,13 @@
 .error-label {
   font-size: 12px;
   color: #f52019;
-  margin: 5px 0 10px 0;
+  margin: 5px 0;
 }
 
 input.input-error {
   border: 1px solid #f52019;
+}
+
+input:focus {
+  border: 1px solid #1890FF
 }
