--- a/src/App.scss
+++ b/src/App.scss
@@ -12,6 +12,9 @@ h1, h2, h3, h4, h5, h6 {
   line-height: 1;
   margin: 0;
 }
+#root{
+  height: 100%;
+}
 
 a {
   text-decoration: none;
@@ -39,9 +42,6 @@ body {
   font-size: 14px;
   font-family: 'Inter', sans-serif;
   font-weight: 400;
-  height: 100%;
-  background: #E5E5E5;
-  color: #262626
 }
 
 .btn {
@@ -135,11 +135,16 @@ body {
 
 .wrapper {
   width: 100%;
-  height: 100%;
   display: flex;
   flex-direction: column;
   min-height: 100%;
-  overflow: hidden;
+  background: #E5E5E5;
+  color: #262626
+}
+
+.wrapper[data-theme="dark"] {
+  background: #494949;
+  color: #e5e5e5
 }
 
 .container {
