update versions: react, react-router-dom, etc.

--- a/src/App.scss
+++ b/src/App.scss
@@ -163,3 +163,8 @@ body {
 textarea.input-error, input.input-error {
   border: 1px solid #f52019;
 }
+
+.not-found {
+  padding: 0 16px;
+  font-size: 32px;
+}
