--- a/src/components/ArticlePage/Article.scss
+++ b/src/components/ArticlePage/Article.scss
@@ -1,3 +1,8 @@
+.article-page[data-theme="dark"] {
+  background: #565656;
+  border: 1px solid #343434;
+}
+
 .article-page {
   padding: 15px 14px 24px 19px;
   background: #FFFFFF;
@@ -17,6 +22,10 @@
     line-height: 22px;
     word-wrap: break-spaces;
     overflow-wrap: break-word;
+  }
+
+  &__text[data-theme="dark"] {
+    color: #E5E5E5;
   }
 }
 
@@ -40,6 +49,10 @@
     line-height: 22px;
     margin: 0 0 25px;
     color: rgba(0, 0, 0, 0.5);
+  }
+
+  &__description[data-theme="dark"] {
+    color: #E5E5E5;
   }
 
   &__title-block {
@@ -67,6 +80,7 @@
   &__info {
     margin: 0 0 30px 0;
     display: flex;
+    justify-content: flex-end;
   }
 
   &__name {
@@ -75,10 +89,18 @@
     color: rgba(0, 0, 0, 0.85);
   }
 
+  &__name[data-theme="dark"] {
+    color: #E5E5E5;
+  }
+
   &__date {
     font-size: 12px;
     line-height: 22px;
     color: rgba(0, 0, 0, 0.5);
+  }
+
+  &__date[data-theme="dark"] {
+    color: #E5E5E5;
   }
 
   &__avatar {
